kube-setup/mrs-kubernetes04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mrs-kubernetes04-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "www.mikeroysoft.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mrs-hugo-prod
            port:
              number: 80
  - host: "dev.mikeroysoft.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mrs-hugo-dev
            port:
              number: 80
