kube-setup/mrs-setup-kube04-ingress2.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mrs-kubernetes04-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - www.mikeroysoft.com
    - dev.mikeroysoft.com
    secretName: mrs-kubernetes04-tls
  rules:
  - host: "www.mikeroysoft.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mrs-hugo-prod
            port:
              number: 80
  - host: "dev.mikeroysoft.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mrs-hugo-dev
            port:
              number: 80
